Updated code for comment service.